[package]
name = "libssh0"
version.workspace = true
edition.workspace = true

[dependencies]
ssh0-proc-macro = { path = "../proc-macro" }
chrono = "0.4.44"
crossterm = "0.29.0"
tokio = { version = "1.49.0", features = ["full"], optional = true }

[features]
tokio = ["dep:tokio"]

[lints]
workspace = true
